@@ -1,7 +1,7 @@
 ##########################################################################################
 # Program Name :     Discord Bot
 # Author       :     DMCTruong
-# Last Updated :     August 8, 2017
+# Last Updated :     August 18, 2017
 # License      :     MIT
 # Description  :     A general purpose bot written for Discord               
 ##########################################################################################
@@ -9,22 +9,33 @@
 
 # To do List:
 #	- Add a calculator
+#	- Add a log function
+#		Command log turned off by default
+#		Error log turned on by default
 #	- Add a translator: https://pypi.python.org/pypi/googletrans
 #	- Add a tutorial on how to install and get the keys for the configurations
 #	- Add better documentation of the code
-#	- Update the /hug command
-#	- Update the README.md
+#	- Move /restart, /shutdown, and /join_date to a cog
 #	- Return the user's avatar?
 
+
+
 # Known Issues:
-#	- The bot seems to buffer a lot when playing music. 
+#	1. The bot seems to buffer a lot when playing music. 
 #		Hopefully, the issue and a solution will be found soon.
+#	- Solution: If the bot seems to be buffering, try changing the server location
+#
+#	2. When /restart command is used the first time, the first window that was used to run the bot does not close.
+#		But if the /restart command is used multiple times, the windows that were used to run the previous
+#		bot instances closes properly.
 
 import discord
 from discord.ext import commands
 import asyncio
 import configurations
 import logging
+import os
+import subprocess
 import sys
 
 from cogs import database
@@ -43,7 +54,7 @@ bot.add_cog(timer.Time(bot))
 
 # run_timer = timer.Time();
 
-print("Please wait while the Bot logs in ...")
+print("\nPlease wait while the Bot logs in ...")
 
 # Upon login, say ...
 @bot.event
@@ -59,10 +70,31 @@ async def on_ready():
 	
 
 @bot.command(pass_context=True, aliases=["disconnect"])
-async def shutdown():
+async def shutdown(ctx):
 	"""Logs the bot off Discord and shuts it down"""
-	await bot.say("Shutting down, see you next time!")
-	await bot.close()
-		
+	if ctx.message.author.id == configurations.BOT_OWNER_ID:
+		await bot.say("Shutting down, see you next time!")
+		await bot.close()
+	else:
+		await bot.say("Sorry, only the bot owner can use this command.")
+
+@bot.command(pass_context=True)
+async def restart(ctx):
+	"""Restarts the bot."""
+	if ctx.message.author.id == configurations.BOT_OWNER_ID:
+		await bot.say("I am restarting, I'll be back in a second!")	
+		subprocess.Popen("restart.sh", shell=True)
+		print("Bot is shutting down ...")
+		await bot.close()
+	else:
+		await bot.say("Sorry, only the bot owner can use this command.")
+
+@bot.command(pass_context=True)
+async def join_date(ctx, member: discord.Member = None):
+	"""Gives user's server join date"""
+	if member is None:
+		member = ctx.message.author
+		await bot.say('{0} joined the server on {0.joined_at}'.format(member))
+	
 	
 bot.run(configurations.BOT_TOKEN)
