@@ -1,7 +1,7 @@
 ##########################################################################################
 # Program Name :     Discord Bot
 # Author       :     DMCTruong
-# Last Updated :     August 8, 2017
+# Last Updated :     August 18, 2017
 # License      :     MIT
 # Description  :     A general purpose bot written for Discord               
 ##########################################################################################
@@ -27,6 +27,7 @@ class Database:
 		"""Give list of all databases saved"""
 		getAlldb = db.child("Discord").shallow().get()
 		allDatabases = "The databases that are available are:\n - {}".format("\n - ".join(getAlldb.val()))
+		print(allDatabases)
 		return await self.bot.say(allDatabases)	
 		
 	# Usage Example: /newEntry Pokemon Electric Pikachu
@@ -35,4 +36,5 @@ class Database:
 		"""Add a database entry or create new database"""
 		db.child("Discord").child(dbname).update({name: "{}".format(entry)})
 		updateSuccess = "The database, {}, has been updated sucessfully with entry, {}: {}.".format(dbname, name, entry)
+		print(updatesuccess)
 		return await self.bot.say(updateSuccess)
