@@ -1,0 +1,4 @@
+#!bin/bash
+printf "Restarting the bot..."
+alias python='winpty python.exe'
+python Bot.py
